fix: make border collapse

--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -29,6 +29,7 @@
 
 .sidebar-content {
   border: 1px solid var(--gray-20);
+  margin-left: -1px;
 }
 
 .sidebar-content:focus {
